infrastructure/kubernetes/base/monitoring/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: preprod
spec:
  gatewayClassName: traefik


  listeners:
  - name: http
    protocol: HTTP
    port: 8000
    hostname: "*.preprod.djepenodev.ink"

  - name: https
    protocol: HTTPS
    port: 8443
    hostname: "*.preprod.djepenodev.ink"

    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: preprod-wildcard-tls
