infrastructure/kubernetes/base/monitoring/http-route.yaml
apiVersion: networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx

spec:
  parentRefs:
    - name: traefik-gateway

  hostname:
    - preprod.djepenodev.ink

  rules:
    - matches
      - path:
        type: PathPrefix
        value: /

        backendRefs:
          - name: nginx
            port: 80
