infrastructure/kubernetes/base/monitoring/monitoring-ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring

spec:
  ingressClassName: traefik

  rules:
    - host: grafana.preprod.djepenodev.ink
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
